refact: Removendo a lógica de eventos para tratar o progresso das missões